--- a/DYZB/DYZB/Classes/Main/Base.lproj/Main.storyboard
+++ b/DYZB/DYZB/Classes/Main/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="sgV-8z-qKF"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="直播" id="X9W-7n-EqY"/>
+                    <tabBarItem key="tabBarItem" title="直播" image="btn_live_normal" selectedImage="btn_live_selected" id="X9W-7n-EqY"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FvE-Dd-3lh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -36,7 +36,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="WKz-mv-z5k"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="关注" id="6WF-vS-2ZK"/>
+                    <tabBarItem key="tabBarItem" title="关注" image="btn_follow_normal" selectedImage="btn_follow_selected" id="6WF-vS-2ZK"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xKL-EA-jO1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -52,7 +52,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="tm1-U2-01b"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="我的" id="jSa-zA-meg"/>
+                    <tabBarItem key="tabBarItem" title="我的" image="btn_profile_normal" selectedImage="btn_profile_selected" id="jSa-zA-meg"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t0H-X5-Gqg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -68,7 +68,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="eHz-vV-sui"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="首页" id="aiL-HD-vza"/>
+                    <tabBarItem key="tabBarItem" title="首页" image="btn_home_normal" selectedImage="btn_home_selected" id="aiL-HD-vza"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aH0-rS-3dV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -95,4 +95,14 @@
             <point key="canvasLocation" x="-2083" y="944"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="btn_follow_normal" width="30" height="24"/>
+        <image name="btn_follow_selected" width="30" height="24"/>
+        <image name="btn_home_normal" width="24" height="24"/>
+        <image name="btn_home_selected" width="24" height="24"/>
+        <image name="btn_live_normal" width="24" height="24"/>
+        <image name="btn_live_selected" width="24" height="24"/>
+        <image name="btn_profile_normal" width="24" height="24"/>
+        <image name="btn_profile_selected" width="24" height="24"/>
+    </resources>
 </document>
