--- a/DYZB/DYZB/Classes/Home/DYZB/Classes/Main/Base.lproj/Home.storyboard
+++ b/DYZB/DYZB/Classes/Home/DYZB/Classes/Main/Base.lproj/Home.storyboard
@@ -1,26 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wAK-06-Rgn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ANp-01-TUe">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--首页-->
+        <!--View Controller-->
         <scene sceneID="ysP-w4-hqz">
             <objects>
                 <viewController id="wAK-06-Rgn" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ro5-D2-ZsT">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="eHz-vV-sui"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="首页" image="btn_home_normal" selectedImage="btn_home_selected" id="aiL-HD-vza"/>
+                    <navigationItem key="navigationItem" id="kJo-Lt-rp8"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aH0-rS-3dV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1164" y="621"/>
+            <point key="canvasLocation" x="-255.07246376811597" y="620.75892857142856"/>
+        </scene>
+        <!--首页-->
+        <scene sceneID="2Tz-F6-GPs">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ANp-01-TUe" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="首页" image="btn_home_normal" selectedImage="btn_home_selected" id="aiL-HD-vza"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5Hd-fx-UzG">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="wAK-06-Rgn" kind="relationship" relationship="rootViewController" id="7Tt-Ze-qqu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HPG-PS-9Yl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1165.217391304348" y="620.75892857142856"/>
         </scene>
     </scenes>
     <resources>
