--- a/DYZB/DYZB/Classes/Live/DYZB/Classes/Main/Base.lproj/Live.storyboard
+++ b/DYZB/DYZB/Classes/Live/DYZB/Classes/Main/Base.lproj/Live.storyboard
@@ -1,26 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JpN-YJ-yFo">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Gam-67-1bW">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--直播-->
+        <!--View Controller-->
         <scene sceneID="Waq-vL-2uN">
             <objects>
                 <viewController id="JpN-YJ-yFo" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8a5-cx-5cH">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="sgV-8z-qKF"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="直播" image="btn_live_normal" selectedImage="btn_live_selected" id="X9W-7n-EqY"/>
+                    <navigationItem key="navigationItem" id="hLz-YK-LkJ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FvE-Dd-3lh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1164" y="1268"/>
+            <point key="canvasLocation" x="-255.07246376811597" y="1267.6339285714284"/>
+        </scene>
+        <!--直播-->
+        <scene sceneID="WqF-aM-AlR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Gam-67-1bW" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="直播" image="btn_live_normal" selectedImage="btn_live_selected" id="X9W-7n-EqY"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ySv-CC-dzn">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="JpN-YJ-yFo" kind="relationship" relationship="rootViewController" id="Otk-8X-VEi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9YV-7y-IcA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1165.217391304348" y="1267.6339285714284"/>
         </scene>
     </scenes>
     <resources>
