--- a/DYZB/DYZB/Classes/Profile/DYZB/Classes/Main/Base.lproj/Profile.storyboard
+++ b/DYZB/DYZB/Classes/Profile/DYZB/Classes/Main/Base.lproj/Profile.storyboard
@@ -1,26 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vXN-C3-a0w">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1gM-PW-cx5">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--我的-->
+        <!--View Controller-->
         <scene sceneID="zyV-5P-gq9">
             <objects>
                 <viewController id="vXN-C3-a0w" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="g7K-ti-Njc">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="tm1-U2-01b"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="我的" image="btn_profile_normal" selectedImage="btn_profile_selected" id="jSa-zA-meg"/>
+                    <navigationItem key="navigationItem" id="RQQ-ea-xbO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t0H-X5-Gqg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-123" y="1274"/>
+            <point key="canvasLocation" x="786.95652173913049" y="1273.6607142857142"/>
+        </scene>
+        <!--我的-->
+        <scene sceneID="o5e-5b-GKv">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1gM-PW-cx5" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="我的" image="btn_profile_normal" selectedImage="btn_profile_selected" id="jSa-zA-meg"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jAB-sH-VRS">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXN-C3-a0w" kind="relationship" relationship="rootViewController" id="mNj-j9-nGA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pEf-X1-8K7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-123.18840579710145" y="1273.6607142857142"/>
         </scene>
     </scenes>
     <resources>
