--- a/DYZB/DYZB/Classes/Main/Base.lproj/Main.storyboard
+++ b/DYZB/DYZB/Classes/Main/Base.lproj/Main.storyboard
@@ -9,65 +9,19 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Tab Bar Controller-->
+        <!--Main View Controller-->
         <scene sceneID="LdX-o7-b6O">
             <objects>
-                <tabBarController id="HP1-IK-cbh" sceneMemberID="viewController">
+                <tabBarController id="HP1-IK-cbh" customClass="MainViewController" customModule="DYZB" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WPT-WS-lZR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
-                    <connections>
-                        <segue destination="qJN-7Y-tL8" kind="relationship" relationship="viewControllers" id="fU5-RR-RCK"/>
-                        <segue destination="sQu-cM-xZd" kind="relationship" relationship="viewControllers" id="mFc-1I-r8H"/>
-                        <segue destination="2GI-ue-Lk1" kind="relationship" relationship="viewControllers" id="z7y-Lx-7py"/>
-                        <segue destination="fqg-7A-iJb" kind="relationship" relationship="viewControllers" id="IS3-Zx-eUU"/>
-                    </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="07n-kl-Gww" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2083" y="944"/>
-        </scene>
-        <!--Home-->
-        <scene sceneID="2no-4P-a4L">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Home" id="qJN-7Y-tL8" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="5vj-DO-STZ"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8QB-ny-8e8" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1242" y="820"/>
-        </scene>
-        <!--Live-->
-        <scene sceneID="b6g-iU-6pG">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Live" id="sQu-cM-xZd" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="5vf-1e-sbk"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ELn-QN-xVB" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1250" y="925"/>
-        </scene>
-        <!--Follow-->
-        <scene sceneID="Vxj-aL-ctA">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Follow" id="2GI-ue-Lk1" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="gzv-vw-Z39"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="GAB-nE-9NG" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1239" y="1013"/>
-        </scene>
-        <!--Profile-->
-        <scene sceneID="YdK-rt-sUB">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Profile" id="fqg-7A-iJb" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="dcc-wl-I8P"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1aB-HX-IsF" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1239" y="1109"/>
         </scene>
     </scenes>
 </document>
