--- a/DYZB/DYZB/Classes/Home/Controller/DYZB/Classes/Main/Base.lproj/Home.storyboard
+++ b/DYZB/DYZB/Classes/Home/Controller/DYZB/Classes/Main/Base.lproj/Home.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="ysP-w4-hqz">
             <objects>
-                <viewController id="wAK-06-Rgn" sceneMemberID="viewController">
+                <viewController id="wAK-06-Rgn" customClass="HomeViewController" customModule="DYZB" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="VeN-rg-pYg"/>
                         <viewControllerLayoutGuide type="bottom" id="hUH-jn-BHf"/>
