--- a/DYZB/Classes/Home/View/CollectionGameCell.xib
+++ b/DYZB/Classes/Home/View/CollectionGameCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CollectionGameCell" customModule="DYZB" customModuleProvider="target">
+        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CollectionGameCell" customModule="DYZB" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="80" height="90"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -19,18 +19,16 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="刘小鱼" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VmA-OR-xP2">
-                        <rect key="frame" x="21.5" y="65" width="37" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="txy-yW-4it"/>
-                        </constraints>
+                        <rect key="frame" x="21.5" y="64.5" width="37" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ydC-iR-t4i">
-                        <rect key="frame" x="18" y="15" width="45" height="45"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ydC-iR-t4i">
+                        <rect key="frame" x="17.5" y="14.5" width="45" height="45"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="ydC-iR-t4i" secondAttribute="height" multiplier="44:45" id="dTo-ol-jaB"/>
+                            <constraint firstAttribute="height" constant="45" id="AlQ-uJ-DkG"/>
+                            <constraint firstAttribute="width" constant="45" id="jW8-Hh-9oQ"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
@@ -39,19 +37,29 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
+                    <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uJa-Jp-zk0">
+                        <rect key="frame" x="0.0" y="90" width="80" height="1"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="9pl-re-4dV"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="VmA-OR-xP2" secondAttribute="bottom" constant="10" id="7h0-Je-Ry5"/>
-                <constraint firstItem="VmA-OR-xP2" firstAttribute="top" secondItem="ydC-iR-t4i" secondAttribute="bottom" constant="5" id="9ss-w0-ths"/>
-                <constraint firstItem="ydC-iR-t4i" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="ERE-dB-q8X"/>
-                <constraint firstItem="VmA-OR-xP2" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="kor-YS-Yti"/>
-                <constraint firstItem="ydC-iR-t4i" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="15" id="rlN-bt-JLf"/>
+                <constraint firstItem="ydC-iR-t4i" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" constant="-8" id="FZz-Ll-XAN"/>
+                <constraint firstAttribute="trailing" secondItem="uJa-Jp-zk0" secondAttribute="trailing" id="Hsd-VY-ziA"/>
+                <constraint firstItem="ydC-iR-t4i" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="fXq-kX-X7Z"/>
+                <constraint firstItem="uJa-Jp-zk0" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="gFn-os-EPe"/>
+                <constraint firstItem="VmA-OR-xP2" firstAttribute="centerX" secondItem="ydC-iR-t4i" secondAttribute="centerX" id="klV-ZF-2LF"/>
+                <constraint firstItem="VmA-OR-xP2" firstAttribute="top" secondItem="ydC-iR-t4i" secondAttribute="bottom" constant="5" id="wRw-nU-sf5"/>
+                <constraint firstAttribute="bottom" secondItem="uJa-Jp-zk0" secondAttribute="bottom" constant="-1" id="z4L-nF-KuW"/>
             </constraints>
             <connections>
                 <outlet property="iconImageView" destination="ydC-iR-t4i" id="VTP-1T-Yq3"/>
                 <outlet property="titleLabel" destination="VmA-OR-xP2" id="zJ0-sS-MgM"/>
             </connections>
+            <point key="canvasLocation" x="137.68115942028987" y="104.46428571428571"/>
         </collectionViewCell>
     </objects>
 </document>
