娱乐界面-顶部数据展示

--- a/DYZB/Classes/Home/View/AmuseMenuView.xib
+++ b/DYZB/Classes/Home/View/AmuseMenuView.xib
@@ -31,6 +31,7 @@
                     </collectionViewFlowLayout>
                     <connections>
                         <outlet property="dataSource" destination="iN0-l3-epB" id="Rqd-m4-CdR"/>
+                        <outlet property="delegate" destination="iN0-l3-epB" id="zAf-Dz-9fR"/>
                     </connections>
                 </collectionView>
             </subviews>
